--- a/acm_basicTopic3.html
+++ b/acm_basicTopic3.html
@@ -213,7 +213,7 @@ mso-ansi-language:UK'>3.2.6.5 Список<o:p></o:p></span></p>
 
 <p class=MsoNormal style='margin-left:70.8pt;line-height:normal;layout-grid-mode:
 char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif;
-mso-ansi-language:UK'>3.2.6.6 Множина. Мультимножина.</span><o:p></o:p></p>
+mso-ansi-language:UK'>3.2.6.6 Множина. Мультимножина.</span></p>
 
 <p class=MsoNormal style='margin-left:70.8pt;line-height:normal;layout-grid-mode:
 char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif;
@@ -233,7 +233,7 @@ mso-ansi-language:UK'>3.2.7 Класифікація структур даних
 
 <p class=MsoNormal style='margin-left:35.4pt;line-height:normal;layout-grid-mode:
 char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif;
-mso-ansi-language:UK'>3.2.8 Деякі важливі структури даних для реалізації АТД</span></p>
+mso-ansi-language:UK'>3.2.8 Реалізації абстрактних типів даних</span></p>
 
 <p class=MsoNormal style='margin-left:70.8pt;line-height:normal;layout-grid-mode:
 char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif;
@@ -327,9 +327,9 @@ mso-ansi-language:UK'>3.3.2.3 Метод декомпозиції </span><i><spa
 style='font-size:14.0pt;font-family:"Times New Roman",serif'>(</span></i><i><span
 lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif;mso-ansi-language:
 UK'>«розділяй та володарюй»</span></i><i><span style='font-size:14.0pt;
-font-family:"Times New Roman",serif'>)</span></i><span style='font-size:14.0pt;
-font-family:"Times New Roman",serif;mso-ansi-language:UK;mso-bidi-font-style:
-italic'> <span lang=UK>та приклади застосування</span></span><span lang=UK
+font-family:"Times New Roman",serif'>)</span></i><span lang=UK
+style='font-size:14.0pt;font-family:"Times New Roman",serif;mso-ansi-language:
+UK;mso-bidi-font-style:italic'> та приклади застосування</span><span lang=UK
 style='mso-ansi-language:UK'><o:p></o:p></span></p>
 
 <p class=MsoNormal style='margin-left:70.8pt;line-height:normal;layout-grid-mode:
