--- a/acm_basicTopic4.html
+++ b/acm_basicTopic4.html
@@ -80,8 +80,8 @@ mso-ansi-language:UK'>4.1.5 Зовнішній пошук</span></p>
 
 <p class=MsoNormal style='margin-left:37.1pt;line-height:normal;layout-grid-mode:
 char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif;
-mso-ansi-language:UK'>4.1.6 Застосування геш-таблиць для пошуку. Розв’язання колізій
-при гешуванні відкритою адресацією та методом ланцюжків. </span></p>
+mso-ansi-language:UK'>4.1.6 Застосування геш-таблиць для пошуку. Розв’язання
+колізій при гешуванні відкритою адресацією та методом ланцюжків. </span></p>
 
 <p class=MsoNormal style='margin-left:1.7pt;line-height:normal;layout-grid-mode:
 char'><b><i><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif;
@@ -247,12 +247,12 @@ mso-ansi-language:UK'>4.5.10 Алгоритм Флойда-Воршелла</spa
 
 <p class=MsoNormal style='margin-left:37.1pt;line-height:normal;layout-grid-mode:
 char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif;
-mso-ansi-language:UK'>4.5.11 Метод генерації всіх максимальних незалежних множин
-графа. Задача про найменше покриття. </span></p>
+mso-ansi-language:UK'>4.5.11 Метод генерації всіх максимальних незалежних
+множин графа. Задача про найменше покриття. </span></p>
 
 <p class=MsoNormal style='margin-left:37.1pt;line-height:normal;layout-grid-mode:
 char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif;
-mso-ansi-language:UK'>4.5.12 Задача про найменше розбиття.</span></p>
+mso-ansi-language:UK'>4.5.12 Задача про найменше розбиття</span></p>
 
 <p class=MsoNormal style='margin-left:37.1pt;line-height:normal;layout-grid-mode:
 char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif;
@@ -296,8 +296,8 @@ mso-ansi-language:UK'>4.6.3 Методи визначення завершенн
 
 <p class=MsoNormal style='margin-left:37.1pt;line-height:normal;layout-grid-mode:
 char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif;
-mso-ansi-language:UK'>4.6.4 Паралельний пошук, паралельне сортування, паралельні
-чисельні алгоритми, паралельні алгоритми на графах</span></p>
+mso-ansi-language:UK'>4.6.4 Паралельний пошук, паралельне сортування,
+паралельні чисельні алгоритми, паралельні алгоритми на графах</span></p>
 
 <p class=MsoNormal>&nbsp;</p>
 
