--- a/acm_annotationAndRecommendedReading.html
+++ b/acm_annotationAndRecommendedReading.html
@@ -56,9 +56,9 @@
 <p class=MsoNormal style='text-indent:1.0cm;line-height:normal'><span lang=UK
 style='font-size:14.0pt;font-family:"Times New Roman",serif;mso-ansi-language:
 UK'>Курс «Алгоритми та моделі обчислень» розроблений на основі класичних
-літературних джерел [1–8] зважаючи на програми аналогічних курсів
-Массачусетського технологічного інституту [9, 10]. Основу дисципліни становлять
-наступні розділи.</span></p>
+літературних джерел [1–9] зважаючи на програми аналогічних курсів Массачусетського
+технологічного інституту [10, 11]. Основу дисципліни становлять наступні
+розділи.</span></p>
 
 <p class=MsoNormal style='margin-left:1.0cm;text-indent:1.0cm;line-height:normal'><span
 lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif;mso-ansi-language:
@@ -78,8 +78,8 @@ theory)</i>;</span><span lang=UK style='mso-ansi-language:UK'><o:p></o:p></span>
 
 <p class=MsoNormal style='margin-left:2.0cm;text-indent:1.0cm;line-height:normal'><span
 lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif;mso-ansi-language:
-UK'>•&nbsp;&nbsp;&nbsp;&nbsp; теорія обчислюваності <i>(англ. Computability
-theory)</i>;</span><span lang=UK style='mso-ansi-language:UK'><o:p></o:p></span></p>
+UK'>•&nbsp;&nbsp;&nbsp;&nbsp; теорія обчислюваності <i>(англ. Computability theory)</i>;</span><span
+lang=UK style='mso-ansi-language:UK'><o:p></o:p></span></p>
 
 <p class=MsoNormal style='margin-left:2.0cm;text-indent:1.0cm;line-height:normal'><span
 lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif;mso-ansi-language:
@@ -161,9 +161,9 @@ EN-US'><o:p></o:p></span></p>
 
 <p class=MsoNormal style='margin-left:18.0pt;text-indent:-18.0pt;line-height:
 normal'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif;
-mso-ansi-language:UK'>2. Donald E. Knuth.The Art of Computer Programming,
-Volumes 1-4A Boxed Set. Third Edition (Reading, Massachusetts: Addison-Wesley,
-2011), 3168pp. ISBN 978-0-321-75104-1, 0-321-75104-3.</span><span lang=EN-US
+mso-ansi-language:UK'>2. Donald E. Knuth.The Art of Computer Programming, Volumes
+1-4A Boxed Set. Third Edition (Reading, Massachusetts: Addison-Wesley, 2011),
+3168pp. ISBN 978-0-321-75104-1, 0-321-75104-3.</span><span lang=EN-US
 style='mso-ansi-language:EN-US'><o:p></o:p></span></p>
 
 <p class=MsoNormal style='margin-left:18.0pt;text-indent:-18.0pt;line-height:
@@ -205,29 +205,28 @@ E., &amp; Ullman, J. D. (1974). The Design and Analysis of Computer Algorithms.
 Addison-Wesley. ISBN 978-0-201-00029-0.<o:p></o:p></span></p>
 
 <p class=MsoNormal style='margin-left:18.0pt;text-indent:-18.0pt;line-height:
+normal'><b style='mso-bidi-font-weight:normal'><span lang=EN-US
+style='font-size:14.0pt;font-family:"Times New Roman",serif;mso-ansi-language:
+EN-US'>9. Hopcroft, J. E. &amp; Ullman, J. D., Introduction to Automata Theory,
+Languages and Computation, Reading, <span class=GramE>Mass.:.</span>
+Addison-Wesley, 1979. ISBN 978-0321455369.<o:p></o:p></span></b></p>
+
+<p class=MsoNormal style='margin-left:18.0pt;text-indent:-18.0pt;line-height:
 normal'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif;
-mso-ansi-language:UK'>9. <a
+mso-ansi-language:UK'>10. <a
 href="https://ocw.mit.edu/courses/18-404j-theory-of-computation-fall-2020/">https://ocw.mit.edu/courses/18-404j-theory-of-computation-fall-2020/</a>
 </span><span lang=EN-US style='mso-ansi-language:EN-US'><o:p></o:p></span></p>
 
 <p class=MsoNormal style='margin-left:18.0pt;text-indent:-18.0pt;line-height:
 normal'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif;
-mso-ansi-language:UK'>10. <a
+mso-ansi-language:UK'>11. <a
 href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-science/6-045j-automata-computability-and-complexity-spring-2011/">https://ocw.mit.edu/courses/electrical-engineering-and-computer-science/6-045j-automata-computability-and-complexity-spring-2011/</a>
-</span><span lang=EN-US style='mso-ansi-language:EN-US'><o:p></o:p></span></p>
-
-<p class=MsoNormal style='line-height:normal'><span lang=EN-US
-style='font-size:14.0pt;font-family:"Times New Roman",serif;mso-ansi-language:
-EN-US'>11. Hopcroft, J. E. &amp; Ullman, J. D., Introduction to Automata
-Theory, Languages and Computation, Reading, <span class=GramE>Mass.:.</span>
-Addison-Wesley, 1979. ISBN 978-0321455369.</span><b><span lang=UK
-style='font-size:14.0pt;font-family:"Times New Roman",serif;letter-spacing:
--.3pt;mso-ansi-language:UK'><o:p></o:p></span></b></p>
+</span><span lang=UK style='mso-ansi-language:UK'><o:p></o:p></span></p>
 
 <p class=MsoNormal style='line-height:normal'><b><span lang=UK
 style='font-size:14.0pt;font-family:"Times New Roman",serif;letter-spacing:
--.3pt;mso-ansi-language:UK'>&nbsp;</span></b><span lang=EN-US style='mso-ansi-language:
-EN-US'><o:p></o:p></span></p>
+-.3pt;mso-ansi-language:UK'>&nbsp;</span></b><span lang=UK style='mso-ansi-language:
+UK'><o:p></o:p></span></p>
 
 <p class=MsoNormal align=center style='text-align:center;line-height:normal'><i
 style='mso-bidi-font-style:normal'><span lang=UK style='font-size:14.0pt;
@@ -238,8 +237,8 @@ normal'><span lang=EN-US style='mso-ansi-language:EN-US'><o:p></o:p></span></i><
 <p class=MsoNormal style='margin-left:18.0pt;text-indent:-18.0pt;line-height:
 normal'><span lang=EN-US style='font-size:14.0pt;font-family:"Times New Roman",serif;
 mso-ansi-language:EN-US'>12</span><span lang=UK style='font-size:14.0pt;
-font-family:"Times New Roman",serif;mso-ansi-language:UK'>. Темнікова, О. Л.
-Математична логіка та теорія алгоритмів: Конспект лекцій [Електронний ресурс<span
+font-family:"Times New Roman",serif;mso-ansi-language:UK'>. Темнікова, О. Л. Математична
+логіка та теорія алгоритмів: Конспект лекцій [Електронний ресурс<span
 class=GramE>] :</span> навч. посіб. для студ. спеціальності 113 «Прикладна
 математика», освітньої програми «Наука про дані та математичне моделювання» /
 О. Л. Темнікова ; КПІ ім. Ігоря Сікорського. – Електронні текстові дані (1
@@ -251,9 +250,9 @@ href="https://ela.kpi.ua/bitstreams/90cfd1e3-1a98-4370-95f3-bd1d677d0e7c/downloa
 
 <p class=MsoNormal style='margin-left:18.0pt;text-indent:-18.0pt;line-height:
 normal'><span style='font-size:14.0pt;font-family:"Times New Roman",serif'>13.
-Темнікова, О. Л. Теорія алгоритмів. Алгоритмічні схеми. Практикум [Електронний ресурс]
-: навчальний посібник для студентів, які навчаються за спеціальністю 113
-«Прикладна математика», освітньою програмою «Наука про дані та математичне
+Темнікова, О. Л. Теорія алгоритмів. Алгоритмічні схеми. Практикум [Електронний
+ресурс] : навчальний посібник для студентів, які навчаються за спеціальністю
+113 «Прикладна математика», освітньою програмою «Наука про дані та математичне
 моделювання» / О. Л. Темнікова ; КПІ ім. Ігоря Сікорського. – Електронні
 текстові дані (1 файл: 1,58 Мбайт). – Київ : КПІ ім. Ігоря Сікорського, 2022. –
 43 с. – Назва з екрана. – Режим доступу до ресурсу: <a
@@ -317,8 +316,7 @@ normal'><span style='font-size:14.0pt;font-family:"Times New Roman",serif'>21.
 В. М. Статкевич ; [відп. ред. Г. Б. Подколзін] ; Нац. техн. ун-т України
 &quot;Київ. політехн. ін-т ім. Ігоря Сікорського&quot;, Ін-т приклад. систем.
 аналізу, Каф. мат. методів систем. аналізу. - Київ : КПІ ім. Ігоря Сікорського,
-2020. - 167 с. : рис., табл. - Бібліогр.: с. 162-164. - 55 прим. - ISBN
-978-966-622-967-3<o:p></o:p></span></p>
+2020. - 167 с. : рис., табл. - Бібліогр.: с. 162-164. - 55 прим. - ISBN 978-966-622-967-3<o:p></o:p></span></p>
 
 <p class=MsoNormal style='margin-left:18.0pt;text-indent:-18.0pt;line-height:
 normal'><span style='font-size:14.0pt;font-family:"Times New Roman",serif'>22.
@@ -340,14 +338,14 @@ href="https://ela.kpi.ua/server/api/core/bitstreams/0278c558-aeac-4b4c-96c5-6d8e
 <o:p></o:p></span></p>
 
 <p class=MsoNormal style='margin-left:18.0pt;text-indent:-18.0pt;line-height:
-normal'><span style='font-size:14.0pt;font-family:"Times New Roman",serif'>24. Новотарський,
-М. А. Алгоритми та методи обчислень [Електронний ресурс] : навч. посіб. для
-студентів спеціальностей 121 «Інженерія програмного забезпечення», спеціалізації
-«Програмне забезпечення високопродуктивних комп’ютерних систем та мереж» та 123
-«Комп’ютерна інженерія», спеціалізації «Комп’ютерні системи та мережі» / М. А.
-Новотарський ; КПІ ім. Ігоря Сікорського. – Електронні текстові дані (1 файл:
-4,64 Мбайт). – Київ : КПІ ім. Ігоря Сікорського, 2019. – 407 с. – Назва з
-екрана. – Режим доступу до ресурсу: <a
+normal'><span style='font-size:14.0pt;font-family:"Times New Roman",serif'>24.
+Новотарський, М. А. Алгоритми та методи обчислень [Електронний ресурс] : навч.
+посіб. для студентів спеціальностей 121 «Інженерія програмного забезпечення»,
+спеціалізації «Програмне забезпечення високопродуктивних комп’ютерних систем та
+мереж» та 123 «Комп’ютерна інженерія», спеціалізації «Комп’ютерні системи та
+мережі» / М. А. Новотарський ; КПІ ім. Ігоря Сікорського. – Електронні текстові
+дані (1 файл: 4,64 Мбайт). – Київ : КПІ ім. Ігоря Сікорського, 2019. – 407 с. –
+Назва з екрана. – Режим доступу до ресурсу: <a
 href="https://ela.kpi.ua/bitstreams/7421218e-d7dd-4e75-aa3e-bd7979db4e6d/download">https://ela.kpi.ua/bitstreams/7421218e-d7dd-4e75-aa3e-bd7979db4e6d/download</a>
 <o:p></o:p></span></p>
 
